commented/added finishing touches

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -32,12 +32,8 @@ B.A.S.C in Computer Engineering
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Intern}{Taipei, Taiwan}
-\item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.
-\item Donec et mollis dolor. Praesent et diam eget libero Adobe Coldfusion egestas mattis sit amet vitae augue.
-\item Nam tincidunt congue enim, ut porta lorem Microsoft SQL lacinia consectetur.
-\item Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-\item Pellentesque auctor nisi id magna consequat JavaScript sagittis.
-\item Aliquam at massa ipsum. Quisque bash bibendum purus convallis nulla ultrices ultricies.
+\item Tested and fixed bugs for online questionnaires and surveys for the Ministry of Education in Taiwan
+\item Built an Android app with audio recording/playback to accompany a children's book.
 \end{rSubsection}
 
 
@@ -51,12 +47,12 @@ B.A.S.C in Computer Engineering
 
 \begin{rSection}{Projects}
 \begin{multicols}{2}
-\begin{rSubsection}{Project 1}{}{}{Austin, TX}
+\begin{rSubsection}{Vending Machine REST Server}{}{Node, Express, Kairos API, MongoDB}{}
   \item thing 1
   \item thing 2
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
-\begin{rSubsection}{Project 2}{}{}{Austin, TX}
+\begin{rSubsection}{Safe Sale}{}{Python, Node, Express, Handlebars, CockroachDB}{}
   \item thing 1
   \item thing 2
 \end{rSubsection}
@@ -65,12 +61,12 @@ B.A.S.C in Computer Engineering
 %---------------------------------------------------------------------------------------
 
 \begin{multicols}{2}
-\begin{rSubsection}{Project 3}{}{}{Austin, TX}
+\begin{rSubsection}{NHI Storybook}{}{Android Studio, Java, XML}{}
   \item thing 1
   \item thing 2
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
-\begin{rSubsection}{Project 4}{}{}{Austin, TX}
+  \begin{rSubsection}{Personal Website}{}{HTML, CSS, Bootstrap, JavaScript, jQuery}{}
   \item thing 1
   \item thing 2
 \end{rSubsection}
