--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -82,7 +82,7 @@ B.A.S.C in Computer Engineering
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Programming (Proficient) & JavaScript, Java \\
 Programming (Familiar) &  Python, C  \\
-Libraries/Frameworks & Node.js, Express, React.js, Bootstrap, jQuery \\
+Libraries/Frameworks & Node.js, Express.js, React.js, Bootstrap, jQuery \\
 Markup/Templating & HTML, CSS, \LaTeX \\
 Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \\
 \end{tabular}
