--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -1,4 +1,3 @@
-
 %----------------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
@@ -23,7 +22,7 @@
 \begin{rSection}{Education}
 
 {\bf University of British Columbia} \hfill {\em 2015 - 2019} \\ 
-B.A.S.C in Computer Engineering
+B.A.S.C in Computer Engineering.
 
 \end{rSection}
 %----------------------------------------------------------------------------------------
@@ -32,11 +31,9 @@ B.A.S.C in Computer Engineering
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Intern}{Taipei, Taiwan}
-\item Tested and fixed bugs for online questionnaires and surveys for the Ministry of Education in Taiwan
+\item Tested and fixed bugs for online questionnaires and surveys for the Ministry of Education in Taiwan.
 \item Built an Android app with audio recording/playback to accompany a children's book.
 \end{rSubsection}
-
-
 
 \end{rSection}
 
@@ -48,13 +45,15 @@ B.A.S.C in Computer Engineering
 \begin{rSection}{Projects}
 \begin{multicols}{2}
 \begin{rSubsection}{Vending Machine REST Server}{}{Node, Express, Kairos API, MongoDB}{}
-  \item thing 1
-  \item thing 2
+  \item REST server deployed on AWS consuming several APIs for connecting to our IoT vending machine, Raspberry Pi, and Android app.
+  \item Secure login and password hashing/salting using Passport.js.
+  \item Facial recognition login using Kairos API and HTML5 Media Capture.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
 \begin{rSubsection}{Safe Sale}{}{Python, Node, Express, Handlebars, CockroachDB}{}
-  \item thing 1
-  \item thing 2
+  \item Chrome extension for deciding on the safest place to make a trade between a buyer and seller on Craigslist, based on RCMP's criminal activity database.
+  \item Scores criminal activity data based on severity and stores data in CockroachDB.
+  \item Utilizes Google Maps API to find location.
 \end{rSubsection}
 \end{multicols}
 
@@ -62,13 +61,14 @@ B.A.S.C in Computer Engineering
 
 \begin{multicols}{2}
 \begin{rSubsection}{NHI Storybook}{}{Android Studio, Java, XML}{}
-  \item thing 1
-  \item thing 2
+  \item An app accompanying a storybook for children to learn to read through the sound of their parent's voice.
+  \item Recording and playback capabilities to assist children.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
   \begin{rSubsection}{Personal Website}{}{HTML, CSS, Bootstrap, JavaScript, jQuery}{}
-  \item thing 1
-  \item thing 2
+  \item A personal portfolio to showcase my projects.
+  \item Utilizes HTML5 canvas and Typed.js library to create handwriting and typing animations.
+  \item Sketch is used to prototype and create svg vector images.
 \end{rSubsection}
 \end{multicols}
 
@@ -98,7 +98,7 @@ Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{18ex}} l @{\hspace{6ex}} l}
 NWHacks 2017 & Western Canada's largest hackathon & Participant (2017) \\
-BizHacks 2017 & Western Canada's largest hackathon & Participant (2017) \\
+BizHacks 2017 & Business focused hackathon & Participant (2017) \\
 UBC Thunderbots & Autonomous soccer-playing robots & Member (2016 - 2017) \\
 \end{tabular}
 
