--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -81,7 +81,7 @@ B.A.S.C in Computer Engineering.
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Programming (Proficient) & JavaScript, Java \\
-Programming (Familiar) &  Python, C  \\
+Programming (Familiar) &  Python, C, C++  \\
 Libraries/Frameworks & Node.js, Express.js, React.js, Bootstrap, jQuery \\
 Markup/Templating & HTML, CSS, \LaTeX \\
 Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \\
