--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -83,7 +83,7 @@ B.A.S.C in Computer Engineering.
 Programming (Proficient) & JavaScript, Java \\
 Programming (Familiar) &  Python, C, C++  \\
 Libraries/Frameworks & Node.js, Express.js, React.js, Bootstrap, jQuery \\
-Markup/Templating & HTML, CSS, \LaTeX \\
+Markup/Templating & HTML, CSS, XML, \LaTeX \\
 Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \\
 \end{tabular}
 
