--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -66,7 +66,7 @@ B.A.S.C in Computer Engineering.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
   \begin{rSubsection}{Personal Website}{}{HTML, CSS, Bootstrap, JavaScript, jQuery}{}
-  \item A personal portfolio to showcase my projects.
+  \item A responsive personal portfolio to showcase my projects.
   \item Utilizes HTML5 canvas and Typed.js library to create handwriting and typing animations.
   \item Sketch is used to prototype and create svg vector images.
 \end{rSubsection}
