--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -50,10 +50,11 @@ B.A.S.C in Computer Engineering.
   \item Facial recognition login using Kairos API and HTML5 Media Capture.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
-\begin{rSubsection}{Safe Sale}{}{Python, Node, Express, Handlebars, CockroachDB}{}
+  \begin{rSubsection}{Safe Sale (NWHacks17)}{}{Python, Node, Express, Handlebars, CockroachDB}{}
   \item Chrome extension for deciding on the safest place to make a trade between a buyer and seller on Craigslist, based on RCMP's criminal activity database.
   \item Scores criminal activity data based on severity and stores data in CockroachDB.
   \item Utilizes Google Maps API to find location.
+  \item Worked on front-end portion.
 \end{rSubsection}
 \end{multicols}
 
