--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -51,10 +51,9 @@ B.A.S.C in Computer Engineering.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
   \begin{rSubsection}{Safe Sale (NWHacks17)}{}{Python, Node, Express, Handlebars, CockroachDB}{}
-  \item Chrome extension for deciding on the safest place to make a trade between a buyer and seller on Craigslist, based on RCMP's criminal activity database.
+  \item Chrome extension for deciding on the safest place to make a trade between a buyer and seller on Craigslist, based on RCMP's criminal activity database. Worked on front-end portion.
   \item Scores criminal activity data based on severity and stores data in CockroachDB.
   \item Utilizes Google Maps API to find location.
-  \item Worked on front-end portion.
 \end{rSubsection}
 \end{multicols}
 
