--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -44,7 +44,7 @@ B.A.S.C in Computer Engineering.
 
 \begin{rSection}{Projects}
 \begin{multicols}{2}
-\begin{rSubsection}{Vending Machine REST Server}{}{Node, Express, Kairos API, MongoDB}{}
+\begin{rSubsection}{Vending Machine REST Server}{}{Node, Express, Kairos API, Mongoose, MongoDB}{}
   \item REST server deployed on AWS consuming several APIs for connecting to our IoT vending machine, Raspberry Pi, and Android app.
   \item Secure login and password hashing/salting using Passport.js.
   \item Facial recognition login using Kairos API and HTML5 Media Capture.
@@ -79,10 +79,10 @@ B.A.S.C in Computer Engineering.
 
 \begin{rSection}{Skills}
 
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
+\begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
 Programming (Proficient) & JavaScript, Java \\
 Programming (Familiar) &  Python, C, C++  \\
-Libraries/Frameworks & Node.js, Express.js, React.js, Bootstrap, jQuery \\
+Libraries/Frameworks & Node.js, Express.js, React.js, Bootstrap, jQuery, Mongoose \\
 Markup/Templating & HTML, CSS, XML, \LaTeX \\
 Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \\
 \end{tabular}
