--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -100,7 +100,7 @@ Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \
 NWHacks 2017 & Western Canada's largest hackathon & Participant (2017) \\
 BizHacks 2017 & Business focused hackathon & Participant (2017) \\
 UBC Thunderbots & Autonomous soccer-playing robots & Member (2016 - 2017) \\
-UBC LaunchPad & Software engineering team & Developer (2017 - Present) \\
+UBC LaunchPad & Develop apps - conception to release & Developer (2017 - Present) \\
 \end{tabular}
 
 \end{rSection}
