slight resume format change

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -80,8 +80,7 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming (Proficient) & JavaScript, Java \\
-Programming (Familiar) &  Python, C, C++  \\
+Programming Languages & JavaScript, Java, Python, C, C++  \\
 Libraries/Frameworks & Node.js, Express.js, React.js, Bootstrap, jQuery, Mongoose \\
 Markup/Templating & HTML, CSS, XML, \LaTeX \\
 Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \\
