--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -81,7 +81,7 @@ B.A.S.C in Computer Engineering.
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
 Programming Languages & JavaScript, Java, Python, C, C++  \\
-Libraries/Frameworks & Node.js, Express.js, React.js, Bootstrap, jQuery, Mongoose \\
+Libraries/Frameworks & Node.js, Express.js, Requests, BeautifulSoup, Bootstrap, jQuery, Mongoose \\
 Markup/Templating & HTML, CSS, XML, \LaTeX \\
 Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \\
 \end{tabular}
