--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -44,8 +44,8 @@ B.A.S.C in Computer Engineering.
 
 \begin{rSection}{Projects}
 \begin{multicols}{2}
-\begin{rSubsection}{Vending Machine REST Server}{}{Node, Express, Kairos API, Mongoose, MongoDB}{}
-  \item REST server deployed on AWS consuming several APIs for connecting to our IoT vending machine, Raspberry Pi, and Android app.
+\begin{rSubsection}{Vending Machine REST Server}{}{Node, Express, Kairos API, AWS, MongoDB}{}
+  \item REST server deployed on AWS EC2 consuming several APIs for connecting to our IoT vending machine, Raspberry Pi, and Android app.
   \item Secure login and password hashing/salting using Passport.js.
   \item Facial recognition login using Kairos API and HTML5 Media Capture.
 \end{rSubsection}
