--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -81,7 +81,7 @@ B.A.S.C in Computer Engineering.
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
 Programming Languages & JavaScript, Java, Python, C, C++  \\
-Libraries/Frameworks & Node.js, Express.js, Requests, BeautifulSoup, Bootstrap, jQuery, Mongoose \\
+Libraries/Frameworks & Node.js, Express.js, React.js, Bootstrap, jQuery, Mongoose \\
 Markup/Templating & HTML, CSS, XML, \LaTeX \\
 Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \\
 \end{tabular}
@@ -99,7 +99,7 @@ Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \
 NWHacks 2017 & Western Canada's largest hackathon & Participant (2017) \\
 BizHacks 2017 & Business focused hackathon & Participant (2017) \\
 UBC Thunderbots & Autonomous soccer-playing robots & Member (2016 - 2017) \\
-UBC LaunchPad & Develop apps - conception to release & Developer (2017 - Present) \\
+UBC LaunchPad & Develop software in teams & Developer (2017 - Present) \\
 \end{tabular}
 
 \end{rSection}
