--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -31,8 +31,8 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Intern}{Taipei, Taiwan}
-\item Tested and fixed bugs for online questionnaires and surveys for the Ministry of Education in Taiwan.
-\item Built an Android app with audio recording/playback to accompany a children's book.
+\item Tested for bugs in questionnaires and surveys for the Ministry of Education in Taiwan using excel.
+\item Developed app using Android Studio with audio recording/playback for a storybook using Java and XML.
 \end{rSubsection}
 
 \end{rSection}
@@ -60,13 +60,12 @@ B.A.S.C in Computer Engineering.
 %---------------------------------------------------------------------------------------
 
 \begin{multicols}{2}
-\begin{rSubsection}{NHI Storybook}{}{Android Studio, Java, XML}{}
-  \item An app accompanying a storybook for children to learn to read through the sound of their parent's voice.
-  \item Recording and playback capabilities to assist children.
+\begin{rSubsection}{Multi-threaded brainyquote.com Scraper}{}{Python, BeautifulSoup, Requests, sqlite3}{}
+  \item Used threading to reduce time for scraping from hours to minutes by utilizing an iterative and modular approach.
+  \item Stored results in sqlite3 database to integrate into a React.js website, which is currently in progress.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
   \begin{rSubsection}{Personal Website}{}{HTML, CSS, Bootstrap, JavaScript, jQuery}{}
-  \item A responsive personal portfolio to showcase my projects.
   \item Utilizes HTML5 canvas and Typed.js library to create handwriting and typing animations.
   \item Sketch is used to prototype and create svg vector images.
 \end{rSubsection}
@@ -80,7 +79,7 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & JavaScript, Java, Python, C, C++  \\
+Programming Languages & JavaScript, Python, Java, C, C++  \\
 Libraries/Frameworks & Node.js, Express.js, React.js, Bootstrap, jQuery, Mongoose \\
 Markup/Templating & HTML, CSS, XML, \LaTeX \\
 Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \\
