--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -30,8 +30,15 @@ B.A.S.C in Computer Engineering.
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Experience}
 
+\begin{rSubsection}{Hootsuite}{January 2018 - Present}{Software Engineering Intern}{Vancouver, Canada}
+\item Contributed to multiple microservices that forms a unified messaging system across multiple social networks.
+\item Worked with Kafka in distributed systems to sort and process events on messages and threads.
+\item Utilized protocol buffers with Google's gRPC to extend a rootification service written in Golang.
+\item Implemented and extended endpoint in GraphQL for interfacing with a React frontend.
+\end{rSubsection}
+ %---------------------------------------------------------------------------
 \begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Intern}{Taipei, Taiwan}
-\item Tested for bugs in questionnaires and surveys for the Ministry of Education in Taiwan using excel.
+\item Tested for bugs in questionnaires and surveys for the Ministry of Education in Taiwan using Excel.
 \item Developed app using Android Studio with audio recording/playback for a storybook using Java and XML.
 \end{rSubsection}
 
@@ -50,24 +57,10 @@ B.A.S.C in Computer Engineering.
   \item Facial recognition login using Kairos API and HTML5 Media Capture.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
-  \begin{rSubsection}{Safe Sale (NWHacks17)}{}{Python, Node, Express, Handlebars, CockroachDB}{}
+  \begin{rSubsection}{SmartSous}{}{Python, Node, Express, Handlebars, CockroachDB}{}
   \item Chrome extension for deciding on the safest place to make a trade between a buyer and seller on Craigslist, based on RCMP's criminal activity database. Worked on front-end portion.
   \item Scores criminal activity data based on severity and stores data in CockroachDB.
   \item Utilizes Google Maps API to find location.
-\end{rSubsection}
-\end{multicols}
-
-%---------------------------------------------------------------------------------------
-
-\begin{multicols}{2}
-\begin{rSubsection}{Multi-threaded brainyquote.com Scraper}{}{Python, BeautifulSoup, Requests, sqlite3}{}
-  \item Used threading to reduce time for scraping from hours to minutes by utilizing an iterative and modular approach.
-  \item Stored results in sqlite3 database to integrate into a React.js website, which is currently in progress.
-\end{rSubsection}
-\columnbreak %---------------------------------------------------------------------------
-  \begin{rSubsection}{Personal Website}{}{HTML, CSS, Bootstrap, JavaScript, jQuery}{}
-  \item Utilizes HTML5 canvas and Typed.js library to create handwriting and typing animations.
-  \item Sketch is used to prototype and create svg vector images.
 \end{rSubsection}
 \end{multicols}
 
@@ -79,10 +72,9 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & JavaScript, Python, Java, C, C++  \\
-Libraries/Frameworks & Node.js, Express.js, React.js, Bootstrap, jQuery, Mongoose \\
-Markup/Templating & HTML, CSS, XML, \LaTeX \\
-Tools/Databases & Android Studio, MongoDB, AWS, Git, Vim, Sublime Text, Sketch \\
+Programming Languages & JavaScript, Scala, Python, Go, Java, Php,  C, C++, GraphQL  \\
+Libraries/Frameworks & Node.js, React.js, Cats, Play  \\
+Tools/Databases & Kubernetes, Docker, gRPC, AWS, Jenkins, sbt, Jira \\
 \end{tabular}
 
 \end{rSection}
