--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -32,9 +32,10 @@ B.A.S.C in Computer Engineering.
 
 \begin{rSubsection}{Hootsuite}{January 2018 - Present}{Software Engineering Intern}{Vancouver, Canada}
 \item Contributed to multiple microservices that forms a unified messaging system across multiple social networks.
-\item Worked with Kafka in distributed systems to sort and process events on messages and threads.
+\item Worked with Kafka in scala distributed systems to sort and process events on messages and threads.
 \item Utilized protocol buffers with Google's gRPC to extend a rootification service written in Golang.
-\item Implemented and extended endpoint in GraphQL for interfacing with a React frontend.
+\item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
+\item Refactored and implemented new features in existing PHP monolithic legacy system.  
 \end{rSubsection}
  %---------------------------------------------------------------------------
 \begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Intern}{Taipei, Taiwan}
@@ -74,7 +75,7 @@ B.A.S.C in Computer Engineering.
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
 Programming Languages & JavaScript, Scala, Python, Go, Java, Php,  C, C++, GraphQL  \\
 Libraries/Frameworks & Node.js, React.js, Cats, Play  \\
-Tools/Databases & Kubernetes, Docker, gRPC, AWS, Jenkins, sbt, Jira \\
+Tools/Databases & Kubernetes, Docker, gRPC, AWS, Jenkins, sbt, Jira, Sumologic \\
 \end{tabular}
 
 \end{rSection}
