--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -58,7 +58,7 @@ B.A.S.C in Computer Engineering.
   \item Facial recognition login using Kairos API and HTML5 Media Capture.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
-  \begin{rSubsection}{SmartSous}{}{Python, Node, Express, Handlebars, CockroachDB}{}
+  \begin{rSubsection}{SafeSale}{}{Python, Node, Express, Handlebars, CockroachDB}{}
   \item Chrome extension for deciding on the safest place to make a trade between a buyer and seller on Craigslist, based on RCMP's criminal activity database. Worked on front-end portion.
   \item Scores criminal activity data based on severity and stores data in CockroachDB.
   \item Utilizes Google Maps API to find location.
