--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -73,7 +73,7 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & JavaScript, Scala, Python, Go, Java, Php,  C, C++, GraphQL  \\
+Programming Languages & Scala, Python, C, C++, Go, Java, Php, JavaScript, GraphQL  \\
 Libraries/Frameworks & Node.js, React.js, Cats, Play  \\
 Tools/Databases & Kubernetes, Docker, gRPC, AWS, Jenkins, sbt, Jira, Sumologic \\
 \end{tabular}
