--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -34,7 +34,8 @@ B.A.S.C in Computer Engineering.
 \item Worked with Kafka in scala distributed systems to sort and process events on messages and threads.
 \item Utilized protocol buffers with Google's gRPC to extend a rootification service written in Golang.
 \item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
-\item Refactored and implemented new features in existing PHP monolithic legacy system.  
+\item Refactored and implemented new features in existing PHP monolithic legacy system.
+\item Integrated Instagram Business capabilities with Hootsuite Streams.  
 \end{rSubsection}
  %---------------------------------------------------------------------------
 \begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Intern}{Taipei, Taiwan}
