--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -73,8 +73,8 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & Scala, Python, C, C++, Go, Java, Php, JavaScript, GraphQL  \\
-Libraries/Frameworks & Node.js, React.js, Cats, Play  \\
+Programming Languages & Scala, Python, C, C++, Go, Java, Php, JavaScript, Php, GraphQL  \\
+Libraries/Frameworks & React.js, Express.js, Cats, Play  \\
 Tools/Databases & Kubernetes, Docker, gRPC, AWS, Jenkins, sbt, Jira, Sumologic \\
 \end{tabular}
 
