--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -30,7 +30,7 @@ B.A.S.C in Computer Engineering.
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{Hootsuite}{January 2018 - Present}{Software Engineering Intern}{Vancouver, Canada}
+\begin{rSubsection}{Hootsuite}{January 2018 - August 2018}{Software Engineering Intern}{Vancouver, Canada}
 \item Worked with Kafka in scala distributed systems to sort and process events on messages and threads.
 \item Utilized protocol buffers with Google's gRPC to extend a rootification service written in Golang.
 \item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
