--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -73,7 +73,7 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & Scala, Python, C, C++, Go, Java, JavaScript, Php, GraphQL  \\
+Programming Languages & Scala, Python, C, C++, Golang, Java, JavaScript, Php, GraphQL  \\
 Libraries/Frameworks & React.js, Express.js, Cats, Play  \\
 Tools/Databases & Kubernetes, Docker, gRPC, AWS, Jenkins, sbt, Jira, Sumologic \\
 \end{tabular}
