--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -88,9 +88,10 @@ Tools/Databases & Kubernetes, Docker, gRPC, AWS, Jenkins, sbt, Jira, Sumologic \
 \begin{rSection}{Activities}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{18ex}} l @{\hspace{6ex}} l}
+
+NWHacks 2019 & Western Canada's largest hackathon & Top 20 (2019) \\
 NWHacks 2017 & Western Canada's largest hackathon & Participant (2017) \\
 BizHacks 2017 & Business focused hackathon & Participant (2017) \\
-UBC Thunderbots & Autonomous soccer-playing robots & Member (2016 - 2017) \\
 UBC LaunchPad & Develop software in teams & Developer (2017 - Present) \\
 \end{tabular}
 
