update grad date

--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -21,7 +21,7 @@
 
 \begin{rSection}{Education}
 
-{\bf University of British Columbia} \hfill {\em 2015 - 2019} \\ 
+{\bf University of British Columbia} \hfill {\em 2015 - Present} \\ 
 B.A.S.C in Computer Engineering.
 
 \end{rSection}
