--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -31,7 +31,7 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{Hootsuite}{January 2018 - August 2018}{Software Engineering Intern}{Vancouver, Canada}
-\item Worked with Kafka in scala distributed systems to sort and process events on messages and threads.
+\item Worked in scala distributed systems to sort and process events on messages and threads which uses kafka.
 \item Utilized protocol buffers with Google's gRPC to extend a rootification service written in Golang.
 \item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
 \item Refactored and implemented new features in existing PHP monolithic legacy system.
@@ -73,9 +73,9 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & Scala, Python, C, C++, Golang, Java, JavaScript, Php, GraphQL  \\
-Libraries/Frameworks & React.js, Express.js, Cats, Play  \\
-Tools/Databases & Kubernetes, Docker, gRPC, AWS, Jenkins, sbt, Jira, Sumologic \\
+Programming Languages & Scala, Python, JavaScript, C, C++, Golang, Java, Php, GraphQL  \\
+Libraries/Frameworks & React.js, Express.js, Restify, Cats, Play  \\
+Tools/Databases & Docker, gRPC, AWS, Jenkins, sbt, Jira, Sumologic, Kubernetes \\
 \end{tabular}
 
 \end{rSection}
