--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -4,6 +4,7 @@
 
 \documentclass{resume} % Use the custom resume.cls style
 \usepackage{multicol}
+\usepackage{hyperref}
 \setlength{\multicolsep}{6.0pt plus 2.0pt minus 1.5pt}
 \setlength{\extrarowheight}{0.1cm}
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
@@ -31,11 +32,11 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{Hootsuite}{January 2018 - August 2018}{Software Engineering Intern}{Vancouver, Canada}
-\item Worked in scala distributed systems to sort and process events on messages and threads which uses kafka.
+\item Wrote functions in Scala to sort and process events on messages and threads.
 \item Utilized protocol buffers with Google's gRPC to extend a rootification service written in Golang.
 \item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
 \item Refactored and implemented new features in existing PHP monolithic legacy system.
-\item Integrated Instagram Business capabilities with Hootsuite Streams.  
+\item Integrated Instagram Business capabilities with Hootsuite Streams in Scala.  
 \end{rSubsection}
  %---------------------------------------------------------------------------
 \begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Intern}{Taipei, Taiwan}
@@ -52,10 +53,10 @@ B.A.S.C in Computer Engineering.
 
 \begin{rSection}{Projects}
 \begin{multicols}{2}
-\begin{rSubsection}{Vending Machine REST Server}{}{Node, Express, Kairos API, AWS, MongoDB}{}
-  \item REST server deployed on AWS EC2 consuming several APIs for connecting to our IoT vending machine, Raspberry Pi, and Android app.
-  \item Secure login and password hashing/salting using Passport.js.
-  \item Facial recognition login using Kairos API and HTML5 Media Capture.
+  \begin{rSubsection}{\href{http://35.227.168.10:5000/}{Hotel Management API}}{}{Restify.js, Google Cloud SQL, Google Cloud filestore, Azure Cognitive Systems, Paypal API}{}
+  \item REST API deployed on Google Compute Engine consuming several APIs for connecting to DE1-SOC and Raspberry Pi.
+  \item OpenAPI and slate to generate intuitive API documentation.
+  \item Facial recognition login using Azure Face API with file references to images saved in database and images saved in filestore.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
   \begin{rSubsection}{SafeSale}{}{Python, Node, Express, Handlebars, CockroachDB}{}
@@ -74,7 +75,7 @@ B.A.S.C in Computer Engineering.
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
 Programming Languages & Scala, Python, JavaScript, C, C++, Golang, Java, Php, GraphQL  \\
-Libraries/Frameworks & React.js, Express.js, Restify, Cats, Play  \\
+Libraries/Frameworks & React.js, ReactNative, Express.js, Restify, Cats, Play  \\
 Tools/Databases & Docker, gRPC, AWS, Jenkins, sbt, Jira, Sumologic, Kubernetes \\
 \end{tabular}
 
