--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -31,7 +31,7 @@ B.A.S.C in Computer Engineering.
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{Hootsuite}{January 2018 - August 2018}{Software Engineering Intern}{Vancouver, Canada}
+  \begin{rSubsection}{Hootsuite}{January 2018 - August 2018}{Software Engineering Intern}{Vancouver, Canada}
 \item Wrote functions in Scala to sort and process events on messages and threads.
 \item Utilized protocol buffers with Google's gRPC to extend a rootification service written in Golang.
 \item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
@@ -54,15 +54,15 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Projects}
 \begin{multicols}{2}
   \begin{rSubsection}{\href{http://cpen-391.appspot.com}{Hotel Management API}}{}{Restify.js, Google Cloud SQL, Google Cloud filestore, Azure Cognitive Systems, Paypal API}{}
-  \item REST API deployed on Google Compute Engine consuming several APIs for connecting to DE1-SOC and Raspberry Pi.
-  \item OpenAPI and slate to generate intuitive API documentation.
+  \item REST API deployed on Google App Engine consuming several APIs for connecting to DE1-SOC and Raspberry Pi.
+  \item Secure credit card handling with Paypal's Vault API.
   \item Facial recognition login using Azure Face API with file references to images saved in database and images saved in filestore.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
-  \begin{rSubsection}{SafeSale}{}{Python, Node, Express, Handlebars, CockroachDB}{}
-  \item Chrome extension for deciding on the safest place to make a trade between a buyer and seller on Craigslist, based on RCMP's criminal activity database. Worked on front-end portion.
-  \item Scores criminal activity data based on severity and stores data in CockroachDB.
-  \item Utilizes Google Maps API to find location.
+  \begin{rSubsection}{Smart Security}{}{Python, Golang, Terraform, AWS Lambda, AWS Kinesis, AWS Rekognition}{}
+  \item Uses terraform to efficiently initialize and deploy AWS infrastructure and code.
+  \item AWS Kinesis and Rekognition to stream video and detect faces from Raspberry Pi camera.
+  \item AWS Lambda and API Gateway provides HTTP endpoint when a trigger is activated.
 \end{rSubsection}
 \end{multicols}
 
@@ -74,9 +74,9 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & Scala, Python, JavaScript, C, C++, Golang, Java, Php, GraphQL  \\
+Programming Languages & JavaScript, Python, Scala, C, C++, Golang, Java, Php, GraphQL  \\
 Libraries/Frameworks & React.js, ReactNative, Express.js, Restify, Cats, Play  \\
-Tools/Databases & Docker, gRPC, AWS, Jenkins, sbt, Jira, Sumologic, Kubernetes \\
+Tools/Databases & Docker, AWS, Terraform, Google Cloud Platform, Azure, gRPC, Kubernetes \\
 \end{tabular}
 
 \end{rSection}
