--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -59,7 +59,7 @@ B.A.S.C in Computer Engineering.
   \item Facial recognition login using Azure Face API with file references to images saved in database and images saved in filestore.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
-  \begin{rSubsection}{Smart Security}{}{Python, Golang, Terraform, AWS Lambda, AWS Kinesis, AWS Rekognition}{}
+  \begin{rSubsection}{Smart Security Camera}{}{Python, Golang, Terraform, AWS Lambda, AWS Kinesis, AWS Rekognition}{}
   \item Uses terraform to efficiently initialize and deploy AWS infrastructure and code.
   \item AWS Kinesis and Rekognition to stream video and detect faces from Raspberry Pi camera.
   \item AWS Lambda and API Gateway provides HTTP endpoint when a trigger is activated.
