--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -75,9 +75,9 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & JavaScript, Python, Scala, C, C++, Golang, Java, Php, GraphQL  \\
+Programming Languages & JavaScript, Python, Scala, C, C++, Golang, Java, Php  \\
 Libraries/Frameworks & React.js, ReactNative, Express.js, Restify, Cats, Play  \\
-Tools/Databases & Docker, AWS, Terraform, Google Cloud Platform, Azure, gRPC, Kubernetes \\
+Tools/Databases & Docker, AWS, Terraform, GCP, GraphQL, Azure, gRPC, Kubernetes \\
 \end{tabular}
 
 \end{rSection}
