--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -32,8 +32,8 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Experience}
 
   \begin{rSubsection}{Hootsuite}{January 2018 - August 2018}{Software Engineering Intern}{Vancouver, Canada}
-\item Wrote functions in Scala to sort and process events on messages and threads.
-\item Utilized protocol buffers with Google's gRPC to extend a rootification service written in Golang.
+\item Assisted with the implementation of Inbox threaded conversations in using a TDD approach.
+\item Utilized proto3 protocol buffers with Google's gRPC to extend a rootification service written in Golang.
 \item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
 \item Refactored and implemented new features in existing PHP monolithic legacy system.
 \item Integrated Instagram Business capabilities with Hootsuite Streams in Scala.  
@@ -41,7 +41,7 @@ B.A.S.C in Computer Engineering.
  %---------------------------------------------------------------------------
 \begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Intern}{Taipei, Taiwan}
 \item Tested for bugs in questionnaires and surveys for the Ministry of Education in Taiwan using Excel.
-\item Developed app using Android Studio with audio recording/playback for a storybook using Java and XML.
+\item Developed and published Android application with audio recording and playback capabilities for a children's storybook.
 \end{rSubsection}
 
 \end{rSection}
