--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -60,7 +60,7 @@ B.A.S.C in Computer Engineering.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
   \begin{rSubsection}{Smart Security Camera}{}{Golang, Terraform, CloudFormation, AWS Lambda, AWS Kinesis, AWS Rekognition, AWS SNS}{}
-  \item Uses terraform to efficiently initialize and deploy AWS infrastructure and code.
+  \item Terraform to efficiently initialize and deploy AWS infrastructure and code.
   \item AWS Kinesis and Rekognition to stream video and detect faces from Raspberry Pi camera.
   \item AWS Lambda and API Gateway provides HTTP endpoint when a trigger is activated.
   \item SNS to subscribe and notify users of intruders.
