--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -59,7 +59,7 @@ B.A.S.C in Computer Engineering.
   \item Facial recognition login using Azure Face API with file references to images saved in database and images saved in filestore.
 \end{rSubsection}
 \columnbreak %---------------------------------------------------------------------------
-  \begin{rSubsection}{Smart Security Camera}{}{Golang, Terraform, CloudFormation, AWS Lambda, AWS Kinesis, AWS Rekognition, AWS SNS}{}
+  \begin{rSubsection}{\href{https://github.com/stevenshih1997/Hotel-Serverless}{Smart Security Camera}}{}{Golang, Terraform, CloudFormation, AWS Lambda, AWS Kinesis, AWS Rekognition, AWS SNS}{}
   \item Terraform to efficiently initialize and deploy AWS infrastructure and code.
   \item AWS Kinesis and Rekognition to stream video and detect faces from Raspberry Pi camera.
   \item AWS Lambda and API Gateway provides HTTP endpoint when a trigger is activated.
