--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -32,7 +32,7 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Experience}
 
   \begin{rSubsection}{Hootsuite}{January 2018 - August 2018}{Software Engineering Intern}{Vancouver, Canada}
-\item Assisted with the implementation of Inbox threaded conversations in using a TDD approach.
+\item Assisted with the implementation of Inbox threaded conversations using a TDD approach.
 \item Utilized proto3 protocol buffers with Google's gRPC to extend a rootification service written in Golang.
 \item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
 \item Refactored and implemented new features in existing PHP monolithic legacy system.
