--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -39,7 +39,7 @@ B.A.S.C in Computer Engineering.
 \item Integrated Instagram Business capabilities with Hootsuite Streams in Scala.  
 \end{rSubsection}
  %---------------------------------------------------------------------------
-\begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Intern}{Taipei, Taiwan}
+\begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Research Intern}{Taipei, Taiwan}
 \item Tested for bugs in questionnaires and surveys for the Ministry of Education in Taiwan using Excel.
 \item Developed and published Android application with audio recording and playback capabilities for a children's storybook.
 \end{rSubsection}
