--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -94,7 +94,7 @@ Tools/Databases & Docker, AWS, Terraform, GCP, GraphQL, Azure, gRPC, Kubernetes 
 NWHacks 2019 & Western Canada's largest hackathon & Top 20 (2019) \\
 NWHacks 2017 & Western Canada's largest hackathon & Participant (2017) \\
 BizHacks 2017 & Business focused hackathon & Participant (2017) \\
-UBC LaunchPad & Develop software in teams & Developer (2017 - Present) \\
+UBC LaunchPad & Student-run software engineering team & Developer (2017 - Present) \\
 \end{tabular}
 
 \end{rSection}
