--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -11,8 +11,8 @@
 
 \name{Steven Shih} % Your name
 \address{6090 Iona Drive, 1007 \\ Vancouver, BC V6T 0B6} % Your address
-\address{steveshih.com \\ github.com/stevenshih1997} % Your secondary addess (optional)
-\address{$(250)\hspace{0.05cm}\cdot\hspace{0.05cm}$885$\hspace{0.05cm}\cdot\hspace{0.05cm}2832$ \\ stevenshih1997@gmail.com} % Your phone number and email
+\address{github.com/stevenshih1997} % Your secondary addess (optional)
+\address{$+1(250)\hspace{0.05cm}\cdot\hspace{0.05cm}$885$\hspace{0.05cm}\cdot\hspace{0.05cm}2832$ \\ stevenshih1997@gmail.com} % Your phone number and email
 
 \begin{document}
 
@@ -23,7 +23,7 @@
 \begin{rSection}{Education}
 
 {\bf University of British Columbia} \hfill {\em 2015 - Present} \\ 
-B.A.S.C in Computer Engineering.
+Bachelor of Applied Science in Computer \& Electrical Engineering.
 
 \end{rSection}
 %----------------------------------------------------------------------------------------
@@ -31,7 +31,13 @@ B.A.S.C in Computer Engineering.
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Experience}
 
-  \begin{rSubsection}{Hootsuite}{January 2018 - August 2018}{Software Engineering Intern}{Vancouver, Canada}
+\begin{rSubsection}{Tesla}{Sept 2019 - Dec 2019}{Incoming Software Intern}{Palo Alto, CA}
+\end{rSubsection}
+
+\begin{rSubsection}{MetCredit}{Jun 2019 - Present}{Software Intern}{Vancouver, Canada}
+\end{rSubsection}
+
+  \begin{rSubsection}{Hootsuite}{Jan 2018 - Aug 2018}{Software Engineering Intern}{Vancouver, Canada}
 \item Assisted with the implementation of Inbox threaded conversations using a TDD approach.
 \item Utilized proto3 protocol buffers with Google's gRPC to extend a rootification service written in Golang.
 \item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
@@ -39,7 +45,7 @@ B.A.S.C in Computer Engineering.
 \item Integrated Instagram Business capabilities with Hootsuite Streams in Scala.  
 \end{rSubsection}
  %---------------------------------------------------------------------------
-\begin{rSubsection}{National Taiwan Normal University}{May 2016 - August 2016}{Research Intern}{Taipei, Taiwan}
+\begin{rSubsection}{National Taiwan Normal University}{May 2016 - Aug 2016}{Research Intern}{Taipei, Taiwan}
 \item Tested for bugs in questionnaires and surveys for the Ministry of Education in Taiwan using Excel.
 \item Developed and published Android application with audio recording and playback capabilities for a children's storybook.
 \end{rSubsection}
@@ -75,9 +81,9 @@ B.A.S.C in Computer Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & JavaScript, Python, Scala, C, C++, Golang, Java, Php  \\
-Libraries/Frameworks & React.js, ReactNative, Express.js, Restify, Cats, Play  \\
-Tools/Databases & Docker, AWS, Terraform, GCP, GraphQL, Azure, gRPC, Kubernetes \\
+Programming Languages & JavaScript, Python, Scala, Java, C, C++, Golang, Php  \\
+Libraries/Frameworks & Express.js, React.js, Restify, ReactNative, Cats, Play  \\
+Tools/Databases & Docker, Terraform, GraphQL, Azure, gRPC, MySQL, PostgreSQL, Kubernetes \\
 \end{tabular}
 
 \end{rSection}
