--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -10,11 +10,40 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{Steven Shih} % Your name
-\address{6090 Iona Drive, 1007 \\ Vancouver, BC V6T 0B6} % Your address
-\address{github.com/stevenshih1997} % Your secondary addess (optional)
-\address{$+1(250)\hspace{0.05cm}\cdot\hspace{0.05cm}$885$\hspace{0.05cm}\cdot\hspace{0.05cm}2832$ \\ stevenshih1997@gmail.com} % Your phone number and email
+% \address{6090 Iona Drive, 1007 \\ Vancouver, BC V6T 0B6} % Your address
+\address{stevenshih1997@gmail.com} % Your secondary addess (optional)
+\address{$+1(250)\hspace{0.05cm}\cdot\hspace{0.05cm}$885$\hspace{0.05cm}\cdot\hspace{0.05cm}2832$ \\ github.com/stevenshih1997} % Your phone number and email
 
 \begin{document}
+
+%----------------------------------------------------------------------------------------
+%	WORK EXPERIENCE SECTION
+%----------------------------------------------------------------------------------------
+\begin{rSection}{Experience}
+
+\begin{rSubsection}{Facebook}{June 2020 - Aug 2020}{Incoming Software Engineer Intern}{}
+\end{rSubsection}
+
+\begin{rSubsection}{Amazon}{Sep 2019 - Dec 2019}{Software Development Engineer Intern}{}
+\item Designed and implemented a scalable batch endpoint solution to allow tenants to submit overrides to a program (Prime, Fresh, etc.).
+\item Augmented feature with SQS to utilize a fleet of hosts to asynchronously process a large request.
+\item Scaled the submission of overrides from a single override to the ability to submit millions.
+\end{rSubsection}
+
+\begin{rSubsection}{MetCredit}{Jun 2019 - Aug 2019}{Software Engineering Intern}{}
+\item Processed imbalanced data using techniques such as over-sampling and SMOTE for training a predictive model.
+\item Increased debt recovery rate using logistic regression analysis on client data to determine propensity to pay.
+\end{rSubsection}
+
+\begin{rSubsection}{Hootsuite}{Jan 2018 - Aug 2018}{Software Engineering Intern}{Inbox Team}
+\item Utilized proto3 protocol buffers with Google's gRPC to extend a rootification service written in Golang.
+\item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
+\item Integrated Instagram Business capabilities with Hootsuite Streams.
+\end{rSubsection}
+
+\begin{rSubsection}{NTNU}{May 2016 - Aug 2016}{Research Intern}{}
+\end{rSubsection}
+\end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -22,33 +51,10 @@
 
 \begin{rSection}{Education}
 
-{\bf University of British Columbia} \hfill {\em 2015 - Present} \\ 
-Bachelor of Applied Science in Computer \& Electrical Engineering.
+{\bf UBC} \hfill {\em Expected 2021} \\ 
+  Bachelor of Applied Science in Computer \& Electrical Engineering. \hfill {\em GPA: 3.7}
 
 \end{rSection}
-%----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE SECTION
-%----------------------------------------------------------------------------------------
-\begin{rSection}{Experience}
-
-\begin{rSubsection}{MetCredit}{Jun 2019 - Present}{Software Intern}{Vancouver, Canada}
-\end{rSubsection}
-
-  \begin{rSubsection}{Hootsuite}{Jan 2018 - Aug 2018}{Software Engineering Intern}{Vancouver, Canada}
-\item Assisted with the implementation of Inbox threaded conversations using a TDD approach.
-\item Utilized proto3 protocol buffers with Google's gRPC to extend a rootification service written in Golang.
-\item Implemented and extended endpoints in GraphQL for interfacing with a React frontend.
-\item Refactored and implemented new features in existing PHP monolithic legacy system.
-\item Integrated Instagram Business capabilities with Hootsuite Streams in Scala.  
-\end{rSubsection}
- %---------------------------------------------------------------------------
-\begin{rSubsection}{National Taiwan Normal University}{May 2016 - Aug 2016}{Research Intern}{Taipei, Taiwan}
-\item Tested for bugs in questionnaires and surveys for the Ministry of Education in Taiwan using Excel.
-\item Developed and published Android application with audio recording and playback capabilities for a children's storybook.
-\end{rSubsection}
-
-\end{rSection}
-
 
 %----------------------------------------------------------------------------------------
 %	PROJECTS SECTION
@@ -78,9 +84,9 @@ Bachelor of Applied Science in Computer \& Electrical Engineering.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
-Programming Languages & JavaScript, Python, Scala, Java, C, C++, Golang, Php  \\
-Libraries/Frameworks & Express.js, React.js, Restify, ReactNative, Cats, Play  \\
-Tools/Databases & Docker, Terraform, GraphQL, Azure, gRPC, MySQL, PostgreSQL, Kubernetes \\
+Programming Languages & Python, Java, JavaScript, Scala, Php  \\
+Libraries/Frameworks & Express.js, Spring, React.js, Restify, ReactNative, Cats, Play  \\
+Tools/Databases & Docker, Terraform, GraphQL, MySQL, PostgreSQL, Kubernetes \\
 \end{tabular}
 
 \end{rSection}
@@ -96,7 +102,6 @@ Tools/Databases & Docker, Terraform, GraphQL, Azure, gRPC, MySQL, PostgreSQL, Ku
 
 NWHacks 2019 & Western Canada's largest hackathon & Top 20 (2019) \\
 NWHacks 2017 & Western Canada's largest hackathon & Participant (2017) \\
-BizHacks 2017 & Business focused hackathon & Participant (2017) \\
 UBC LaunchPad & Student-run software engineering team & Developer (2017 - Present) \\
 \end{tabular}
 
